Bluewolf SFMTA/src/objects/NICPaymentSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ApiKey__c</fullName>
        <description>ApiKey provided for your portal, needs to be passed in the header of the call</description>
        <label>Api Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancelUrl__c</fullName>
        <description>URL where the user is redirected if the payment is cancelled.</description>
        <inlineHelpText>URL where the user is redirected if the payment is cancelled.</inlineHelpText>
        <label>Cancel Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DuplicateUrl__c</fullName>
        <description>URL where the user is redirected after a duplicate payment is detected.</description>
        <inlineHelpText>URL where the user is redirected after a duplicate payment is detected.</inlineHelpText>
        <label>Duplicate Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EndPointToGetToken__c</fullName>
        <description>Randomly generated string to identify this payment session.</description>
        <label>End Point To Get Token</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FailureUrl__c</fullName>
        <description>URL where the user is redirected after a payment has failed a configured number of times.</description>
        <inlineHelpText>URL where the user is redirected after a payment has failed a configured number of times.</inlineHelpText>
        <label>Failure Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MerchantCode__c</fullName>
        <description>Merchant Code used for the transaction, needs to be passed in the header of the call</description>
        <label>Merchant Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MerchantKey__c</fullName>
        <description>Merchant Key used for the transaction, needs to be passed in the header of the call</description>
        <label>Merchant Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFMTAPayment_SiteUrl__c</fullName>
        <description>URL where the user is redirected to the site when user clicks on Make Payment button from Community.</description>
        <inlineHelpText>URL where the user is redirected to the site when user clicks on Make Payment button from Community.</inlineHelpText>
        <label>SFMTAPayment_SiteUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ServiceCode__c</fullName>
        <label>Service Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SetRequestTimeout__c</fullName>
        <description>Set REST API call-out time. Default is 10sec</description>
        <inlineHelpText>Set REST API call-out time. Default is 10sec</inlineHelpText>
        <label>Set Request Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SuccessUrl__c</fullName>
        <description>URL where the user is redirected after a successful payment.</description>
        <inlineHelpText>URL where the user is redirected after a successful payment. E.g. https://domain.salesforce.com/apex/pageName</inlineHelpText>
        <label>Success Url</label>
        <type>Url</type>
    </fields>
    <label>NIC Payment Settings</label>
</CustomObject>